hphp/hack/test/typecheck/safe_abstract/new_classname1.php
<?hh

<<__ConsistentConstruct>>
abstract class A {}

function example(classname<A> $cls): void {
  new $cls(); // error
}
